<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".first_activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/eight_dp"
            card_view:cardCornerRadius="@dimen/thirty_dp"
            card_view:cardElevation="@dimen/fifteen_dp"
            card_view:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/ten_dp"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="@string/football"
                    android:textColor="#000000"
                    android:textSize="@dimen/twentyFive_sp"
                    android:textStyle="bold" />


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pokemon_football" />

                <EditText
                    android:id="@+id/editTeamA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/ten_dp"
                    android:layout_marginStart="@dimen/ten_dp"
                    android:layout_marginTop="@dimen/fifteen_dp"
                    android:hint="@string/team_A" />

                <EditText
                    android:id="@+id/editTeamB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/ten_dp"
                    android:layout_marginStart="@dimen/ten_dp"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:hint="@string/team_B" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/twenty_dp"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:gravity="center"
                    android:text="@string/start" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</ScrollView>