<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:orientation="vertical">

            <!--TEAMS-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textviewA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/team_A"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/twenty_sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textviewB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/team_B"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/twenty_sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <!--GOALS-->

            <LinearLayout
                android:id="@+id/goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fifteen_dp"
                android:layout_marginRight="@dimen/fifteen_dp"
                android:layout_marginTop="@dimen/fifteen_dp">

                <TextView
                    android:id="@+id/goalScoreTeamA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/value_zero"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/fifteen_sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/goalTeamA"
                    android:layout_width="@dimen/ten_dp"
                    android:layout_height="@dimen/thirty_dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"
                    android:onClick="buttonAction"
                    android:text="@string/positive_sign" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/twentySix_dp"
                    android:layout_marginRight="@dimen/twentySix_dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/goals"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/fifteen_sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/goalTeamB"
                    android:layout_width="@dimen/ten_dp"
                    android:layout_height="@dimen/thirty_dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"
                    android:onClick="buttonAction"
                    android:text="@string/positive_sign" />

                <TextView
                    android:id="@+id/goalScoreTeamB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/value_zero"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/fifteen_sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!--Shot on Target-->

            <LinearLayout
                android:id="@+id/shot_on_target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fifteen_dp"
                android:layout_marginRight="@dimen/fifteen_dp"
                android:layout_marginTop="@dimen/fifteen_dp">

                <TextView
                    android:id="@+id/shotOnTargetScoreTeamA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/value_zero"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/fifteen_sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/shotOnTargetTeamA"
                    android:layout_width="@dimen/ten_dp"
                    android:layout_height="@dimen/thirty_dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"
                    android:onClick="buttonAction"
                    android:text="@string/positive_sign" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/Shots_on_target"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/fifteen_sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/shotOnTargetTeamB"
                    android:layout_width="@dimen/ten_dp"
                    android:layout_height="@dimen/thirty_dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"
                    android:onClick="buttonAction"
                    android:text="@string/positive_sign" />

                <TextView
                    android:id="@+id/shotOnTargetScoreTeamB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/value_zero"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/fifteen_sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!--Total Shots-->

            <LinearLayout
                android:id="@+id/total_shots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fifteen_dp"
                android:layout_marginRight="@dimen/fifteen_dp"
                android:layout_marginTop="@dimen/fifteen_dp">

                <TextView
                    android:id="@+id/totalShotsScoreTeamA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/value_zero"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/fifteen_sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/totalShotsTeamA"
                    android:layout_width="@dimen/ten_dp"
                    android:layout_height="@dimen/thirty_dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"
                    android:onClick="buttonAction"
                    android:text="@string/positive_sign" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/ten_dp"
                    android:layout_marginRight="@dimen/ten_dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/total_shots"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/fifteen_sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/totalShotsTeamB"
                    android:layout_width="@dimen/ten_dp"
                    android:layout_height="@dimen/thirty_dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"
                    android:onClick="buttonAction"
                    android:text="@string/positive_sign" />

                <TextView
                    android:id="@+id/totalShotsScoreTeamB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/value_zero"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/fifteen_sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!--Fouls-->
            <LinearLayout
                android:id="@+id/fouls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fifteen_dp"
                android:layout_marginRight="@dimen/fifteen_dp"
                android:layout_marginTop="@dimen/fifteen_dp">

                <TextView
                    android:id="@+id/foulScoreTeamA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/value_zero"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/fifteen_sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/foulTeamA"
                    android:layout_width="@dimen/ten_dp"
                    android:layout_height="@dimen/thirty_dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"
                    android:onClick="buttonAction"
                    android:text="@string/positive_sign" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/thirty_dp"
                    android:layout_marginRight="@dimen/thirty_dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/fouls"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/fifteen_sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/foulTeamB"
                    android:layout_width="@dimen/ten_dp"
                    android:layout_height="@dimen/thirty_dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"
                    android:onClick="buttonAction"
                    android:text="@string/positive_sign" />

                <TextView
                    android:id="@+id/foulScoreTeamB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/value_zero"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/fifteen_sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!--Offsides-->
            <LinearLayout
                android:id="@+id/offside"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fifteen_dp"
                android:layout_marginRight="@dimen/fifteen_dp"
                android:layout_marginTop="@dimen/fifteen_dp">

                <TextView
                    android:id="@+id/offsideScoreTeamA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/value_zero"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/fifteen_sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/offsidesTeamA"
                    android:layout_width="@dimen/ten_dp"
                    android:layout_height="@dimen/thirty_dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"
                    android:onClick="buttonAction"
                    android:text="@string/positive_sign" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/seventeen_dp"
                    android:layout_marginRight="@dimen/seventeen_dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/Offsides"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/fifteen_sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/offsidesTeamB"
                    android:layout_width="@dimen/ten_dp"
                    android:layout_height="@dimen/thirty_dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"
                    android:onClick="buttonAction"
                    android:text="@string/positive_sign" />

                <TextView
                    android:id="@+id/offsideScoreTeamB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/value_zero"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/fifteen_sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!--Corners-->
            <LinearLayout
                android:id="@+id/corners"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fifteen_dp"
                android:layout_marginRight="@dimen/fifteen_dp"
                android:layout_marginTop="@dimen/fifteen_dp">

                <TextView
                    android:id="@+id/cornerScoreTeamA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/value_zero"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/fifteen_sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cornerTeamA"
                    android:layout_width="@dimen/ten_dp"
                    android:layout_height="@dimen/thirty_dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"
                    android:onClick="buttonAction"
                    android:text="@string/positive_sign" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/seventeen_dp"
                    android:layout_marginRight="@dimen/seventeen_dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/corners"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/fifteen_sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cornerTeamB"
                    android:layout_width="@dimen/ten_dp"
                    android:layout_height="@dimen/thirty_dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"
                    android:onClick="buttonAction"
                    android:text="@string/positive_sign" />

                <TextView
                    android:id="@+id/cornerScoreTeamB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/value_zero"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/fifteen_sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/resetScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/twenty_dp"
                android:layout_marginBottom="@dimen/thirtyTwo_dp"
                android:background="@drawable/buttonact"
                android:text="@string/reset"
                android:textColor="@color/colorWhite" />
        </LinearLayout>




        </ScrollView>

